--- a/app/src/main/res/layout/activity_verifycode.xml
+++ b/app/src/main/res/layout/activity_verifycode.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:widget="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
+    android:background="@color/color_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <View
+        android:id="@+id/statusHeaderView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/color_primary"/>
     <android.support.v7.widget.Toolbar
 
-        android:id="@+id/toolbar_verifycode"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/color_primary"
